Up to Lab 6b Completed

--- a/WebDevAssign2/WebDevAssign2/WebDevAssign2.csproj
+++ b/WebDevAssign2/WebDevAssign2/WebDevAssign2.csproj
@@ -179,10 +179,12 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ProductImagesController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -195,6 +197,14 @@
     <Compile Include="Migrations\201901280159409_CategoryNameValidation.Designer.cs">
       <DependentUpon>201901280159409_CategoryNameValidation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901280530308_ProductImages.cs" />
+    <Compile Include="Migrations\201901280530308_ProductImages.Designer.cs">
+      <DependentUpon>201901280530308_ProductImages.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201901280546273_UniqueFileName.cs" />
+    <Compile Include="Migrations\201901280546273_UniqueFileName.Designer.cs">
+      <DependentUpon>201901280546273_UniqueFileName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Category.cs" />
@@ -202,6 +212,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductImage.cs" />
     <Compile Include="Models\ProductMetaData.cs" />
     <Compile Include="OSDB\StoreContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -275,9 +286,15 @@
     <Content Include="Views\Products\Details.cshtml" />
     <Content Include="Views\Products\Edit.cshtml" />
     <Content Include="Views\Products\Index.cshtml" />
+    <Content Include="Views\ProductImages\Upload.cshtml" />
+    <Content Include="Views\ProductImages\Delete.cshtml" />
+    <Content Include="Views\ProductImages\Details.cshtml" />
+    <Content Include="Views\ProductImages\Edit.cshtml" />
+    <Content Include="Views\ProductImages\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\ProductImages\Thumbnails\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -298,6 +315,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201901280159409_CategoryNameValidation.resx">
       <DependentUpon>201901280159409_CategoryNameValidation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901280530308_ProductImages.resx">
+      <DependentUpon>201901280530308_ProductImages.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901280546273_UniqueFileName.resx">
+      <DependentUpon>201901280546273_UniqueFileName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
