--- a/WebDevAssign2/WebDevAssign2/Web.config
+++ b/WebDevAssign2/WebDevAssign2/Web.config
@@ -21,14 +21,23 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="20480"/>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404" subStatusCode="13"/>
+      <error statusCode="404" subStatusCode="13" responseMode="Redirect" path="/Error/FileUploadLimitExceeded"/>
+    </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
     </modules>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="20971520"/>
+      </requestFiltering>
+    </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
